--- a/new/index.html
+++ b/new/index.html
@@ -172,7 +172,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>copyright &copy; Subahsis Samantasinghar. Made with <i class="fa-solid fa-heart"></i></p>
+        <p>copyright &copy; Subahsis Samantasinghar. </p>
     </div>
 </div>
 
